<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorOnPrimary"
        tools:context="com.dev.digitalvalley.SetPinCodes"
        android:orientation="vertical"
        android:padding="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setup"
                android:textSize="24sp" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_here"
                android:textSize="16sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pincode_setup_details"
                android:textSize="14sp"
                android:layout_marginStart="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="2dp"
                android:text="@string/enter_login_pin"
                android:textSize="14sp"
                app:layout_constraintHorizontal_bias="0" />

            <com.chaos.view.PinView
                android:id="@+id/register_login_pin"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="5dp"
                android:digits="0123456789"
                android:inputType="numberPassword"
                android:itemBackground="?android:colorBackground"
                app:cursorColor="?colorSecondaryVariant"
                app:cursorWidth="3dp"
                app:hideLineWhenFilled="true"
                app:itemCount="4"
                app:itemRadius="12dp"
                app:lineColor="?colorPrimary"
                app:lineWidth="1.5dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="2dp"
                android:text="@string/confirm_login_pin"
                android:textSize="14sp" />

            <com.chaos.view.PinView
                android:id="@+id/confirm_login_pin"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="5dp"
                android:digits="0123456789"
                android:inputType="numberPassword"
                android:itemBackground="?android:colorBackground"
                app:cursorColor="?colorSecondaryVariant"
                app:cursorWidth="3dp"
                app:hideLineWhenFilled="true"
                app:itemCount="4"
                app:itemRadius="12dp"
                app:lineColor="?colorPrimary"
                app:lineWidth="1.5dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="2dp"
                android:text="@string/enter_transaction_pin"
                android:textSize="14sp"
                app:layout_constraintHorizontal_bias="0" />

            <com.chaos.view.PinView
                android:id="@+id/register_transaction_pin"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="5dp"
                android:digits="0123456789"
                android:inputType="numberPassword"
                android:itemBackground="?android:colorBackground"
                app:cursorColor="?colorSecondaryVariant"
                app:cursorWidth="3dp"
                app:hideLineWhenFilled="true"
                app:itemCount="4"
                app:itemRadius="12dp"
                app:lineColor="?colorPrimary"
                app:lineWidth="1.5dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="2dp"
                android:text="@string/confirm_transaction_pin"
                android:textSize="14sp" />

            <com.chaos.view.PinView
                android:id="@+id/confirm_transaction_pin"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="5dp"
                android:digits="0123456789"
                android:inputType="numberPassword"
                android:itemBackground="?android:colorBackground"
                app:cursorColor="?colorSecondaryVariant"
                app:cursorWidth="3dp"
                app:hideLineWhenFilled="true"
                app:itemCount="4"
                app:itemRadius="12dp"
                app:lineColor="?colorPrimary"
                app:lineWidth="1.5dp" />

            <Button
                android:id="@+id/set_pins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/done" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
