<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:gravity="center"
    android:orientation="vertical"
    android:background="?colorPrimary">

  <androidx.appcompat.widget.AppCompatTextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/login"
      android:textSize="24sp" />

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_pincode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_pincode"
        android:textSize="16sp"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>

    <com.chaos.view.PinView
        android:id="@+id/pin_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/label_pincode"
        app:layout_constraintEnd_toEndOf="@id/label_pincode"
        app:layout_constraintTop_toBottomOf="@id/label_pincode"
        android:inputType="numberPassword"
        android:digits="0123456789"
        app:itemCount="4"
        app:itemRadius="12dp"
        android:itemBackground="?android:colorBackground"
        app:cursorColor="?colorSecondary"
        app:cursorWidth="3dp"
        app:lineWidth="1dp"
        app:lineColor="?colorOnPrimary"
        app:hideLineWhenFilled="true"
        style="@style/PinWidget.PinView"/>

<!--    <EditText-->
<!--        android:id="@+id/pinedittext_1"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/label_pincode"-->
<!--        android:background="@drawable/pincodebox_selector"-->
<!--        android:maxLength="1"-->
<!--        android:paddingHorizontal="20dp"-->
<!--        android:paddingVertical="10dp"/>-->
<!--    <EditText-->
<!--        android:id="@+id/pinedittext_2"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintStart_toEndOf="@id/pinedittext_1"-->
<!--        app:layout_constraintTop_toTopOf="@id/pinedittext_1"-->
<!--        android:layout_marginStart="10dp"-->
<!--        android:background="@drawable/pincodebox_selector"-->
<!--        android:maxLength="1"-->
<!--        android:paddingHorizontal="20dp"-->
<!--        android:paddingVertical="10dp"/>-->
<!--    <EditText-->
<!--        android:id="@+id/pinedittext_3"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintStart_toEndOf="@id/pinedittext_2"-->
<!--        app:layout_constraintTop_toTopOf="@id/pinedittext_2"-->
<!--        android:layout_marginStart="10dp"-->
<!--        android:background="@drawable/pincodebox_selector"-->
<!--        android:maxLength="1"-->
<!--        android:paddingHorizontal="20dp"-->
<!--        android:paddingVertical="10dp"/>-->

<!--    <EditText-->
<!--        android:id="@+id/pinedittext_4"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintStart_toEndOf="@id/pinedittext_3"-->
<!--        app:layout_constraintTop_toTopOf="@id/pinedittext_3"-->
<!--        android:layout_marginStart="10dp"-->
<!--        android:background="@drawable/pincodebox_selector"-->
<!--        android:maxLength="1"-->
<!--        android:paddingHorizontal="20dp"-->
<!--        android:paddingVertical="10dp" />-->

  </androidx.constraintlayout.widget.ConstraintLayout>

  <androidx.appcompat.widget.AppCompatTextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:text="@string/or"
      android:textSize="18sp" />

</androidx.appcompat.widget.LinearLayoutCompat>